--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dev-utils": "^5.0.0",
     "react-dimensions": "^1.3.1",
     "react-dom": "^16.2.0",
+    "react-headroom": "^2.2.2",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
