--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-window-dimensions": "^1.0.1",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-batch-middleware": "^0.2.0",
