--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "file-loader": "1.1.5",
     "flexbox-react": "^4.4.0",
     "fs-extra": "3.0.1",
+    "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "material-ui": "^1.0.0-beta.32",
