--- a/package.json
+++ b/package.json
@@ -2,19 +2,7 @@
   "name": "aerial_website",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "autoprefixer": "7.1.6",
-    "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.1",
-    "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
-    "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
-    "dotenv-expand": "4.0.1",
+  "devDependencies" : {
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -23,12 +11,30 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-react-app": "^3.1.1",
+    "babel-runtime": "6.26.0",
+    "jest": "20.0.4",
+    "html-webpack-plugin": "2.29.0",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4",
+    "webpack-manifest-plugin": "1.3.2",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "case-sensitive-paths-webpack-plugin": "2.1.1"
+  },
+  "dependencies": {
+    "autoprefixer": "7.1.6",
+    "chalk": "1.1.3",
+    "css-loader": "0.28.7",
+    "dotenv": "4.0.0",
+    "dotenv-expand": "4.0.1",
     "file-loader": "1.1.5",
     "flexbox-react": "^4.4.0",
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
-    "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
     "material-ui": "^1.0.0-beta.32",
     "nanoid": "^1.0.2",
     "object-assign": "4.1.1",
@@ -52,11 +58,7 @@
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "style-loader": "0.19.0",
-    "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
