--- a/package.json
+++ b/package.json
@@ -2,7 +2,20 @@
   "name": "aerial_website",
   "version": "0.1.0",
   "private": true,
-  "devDependencies" : {
+  "scripts": {
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom",
+    "deploy": "yarn build && firebase deploy"
+  },
+  "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-react-app": "^3.1.1",
+    "babel-runtime": "6.26.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -11,21 +24,15 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.1",
-    "babel-runtime": "6.26.0",
-    "jest": "20.0.4",
     "html-webpack-plugin": "2.29.0",
+    "jest": "20.0.4",
+    "sw-precache-webpack-plugin": "0.11.4",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "case-sensitive-paths-webpack-plugin": "2.1.1"
+    "webpack-manifest-plugin": "1.3.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.13.9",
     "autoprefixer": "7.1.6",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
@@ -43,9 +50,9 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
-    "react-dev-utils": "^5.0.0",
+    "react-dev-utils": "^5.0.3",
     "react-dimensions": "^1.3.1",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.14.0",
     "react-headroom": "^2.2.2",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
@@ -60,12 +67,6 @@
     "style-loader": "0.19.0",
     "url-loader": "0.6.2",
     "whatwg-fetch": "2.0.3"
-  },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "deploy": "yarn build && firebase deploy"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -108,5 +109,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "resolutions": {
+    "material-ui/@babel/runtime": "7.0.0-beta.42"
   }
 }
