--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "flexbox-react": "^4.4.0",
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
+    "js-yaml": "3.13.1",
     "material-ui": "^1.0.0-beta.32",
     "nanoid": "^1.0.2",
+    "node-fetch": "2.6.1",
+    "node-notifier": "8.0.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -66,7 +69,8 @@
     "redux-thunk": "^2.2.0",
     "style-loader": "0.19.0",
     "url-loader": "0.6.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "yargs-parser": "13.1.2"
   },
   "jest": {
     "collectCoverageFrom": [
